--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <commons.dbcp2.version>2.13.0</commons.dbcp2.version>
         <commons.text.version>1.13.1</commons.text.version>
         <commons.validator.version>1.9.0</commons.validator.version>
-        <cxf.version>3.6.6</cxf.version>
+        <cxf.version>3.6.7</cxf.version>
         <cxf.build-utils.version>4.1.0</cxf.build-utils.version>
         <easymock.version>5.5.0</easymock.version>
         <ehcache3.version>3.10.8</ehcache3.version>
@@ -285,6 +285,17 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>commons-validator</groupId>
+                <artifactId>commons-validator</artifactId>
+                <version>${commons.validator.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-beanutils</groupId>
+                        <artifactId>commons-beanutils</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -482,7 +493,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
-                    <version>3.23.0</version>
+                    <version>3.26.0</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.cxf.build-utils</groupId>
